WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73744
[GTK] Bad text rendering since
r101343
https://bugs.webkit.org/show_bug.cgi?id=73744
Summary
[GTK] Bad text rendering since r101343
Philippe Normand
Reported
2011-12-03 08:57:18 PST
Disabling CAIRO_HINT_METRICS is good for the tests only it seems. Cairo-based ports should do this in their DRT only.
Attachments
proposed patch
(3.82 KB, patch)
2011-12-03 09:04 PST
,
Philippe Normand
mrobinson
: review-
Details
Formatted Diff
Diff
proposed patch
(5.00 KB, patch)
2011-12-03 09:20 PST
,
Philippe Normand
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-12-03 09:00:56 PST
Can the EFL folks please have a look at this issue as well? I'm about to upload a patch for GTK.
Philippe Normand
Comment 2
2011-12-03 09:04:15 PST
Created
attachment 117760
[details]
proposed patch
Martin Robinson
Comment 3
2011-12-03 09:07:03 PST
Comment on
attachment 117760
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117760&action=review
Looks good to me, but you'll also need to make this change in WebKit2.
> Tools/DumpRenderTree/gtk/DumpRenderTree.cpp:159 > + if (GdkScreen* screen = gdk_screen_get_default()) {
You should probably ASSERT screen and screenOptions here instead of using an if.
Philippe Normand
Comment 4
2011-12-03 09:20:12 PST
Created
attachment 117762
[details]
proposed patch
WebKit Review Bot
Comment 5
2011-12-03 11:55:31 PST
Comment on
attachment 117762
[details]
proposed patch
Attachment 117762
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10727476
New failing tests: svg/custom/linking-uri-01-b.svg
Gyuyoung Kim
Comment 6
2011-12-12 03:55:16 PST
(In reply to
comment #1
)
> Can the EFL folks please have a look at this issue as well? I'm about to upload a patch for GTK.
CC'ing kubo, Hello kubo, it looks we may have similar problem. Does EFL DRT also need to adjust similar patch?
Philippe Normand
Comment 7
2011-12-14 00:36:58 PST
Comment on
attachment 117762
[details]
proposed patch Landed
http://trac.webkit.org/changeset/102748
Lionir
Comment 8
2019-05-17 14:31:05 PDT
Patch landed, this can be closed?
Michael Catanzaro
Comment 9
2019-05-17 15:13:13 PDT
Yes.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug