[GTK] Bad text rendering since r101343 https://bugs.webkit.org/show_bug.cgi?id=73744

Reviewed by Martin Robinson.

Source/WebCore:

* platform/graphics/freetype/FontPlatformDataFreeType.cpp:
(WebCore::setCairoFontOptionsFromFontConfigPattern): Keep Cairo
hint metrics unchanged for better visual font rendering results.

Tools:

Turn cairo hint metrics off for better font metrics reporting in
the tests. This is especially important for SVG.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(initializeGtkFontSettings):
* WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp:
(WTR::initializeGtkSettings):

Canonical link: https://commits.webkit.org/91135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102748 268f45cc-cd09-0410-ab3c-d52691b4dbfc