Tools/WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp
@@ -50,6 +50,16 @@ void initializeGtkSettings()
                  "gtk-font-name", "Liberation Sans 12",
                  "gtk-theme-name", "Raleigh",
                  "gtk-xft-rgba", "none", NULL);
+
+    GdkScreen* screen = gdk_screen_get_default();
+    ASSERT(screen);
+    const cairo_font_options_t* screenOptions = gdk_screen_get_font_options(screen);
+    ASSERT(screenOptions);
+    cairo_font_options_t* options = cairo_font_options_copy(screenOptions);
+    // Turn off text metrics hinting, which quantizes metrics to pixels in device space.
+    cairo_font_options_set_hint_metrics(options, CAIRO_HINT_METRICS_OFF);
+    gdk_screen_set_font_options(screen, options);
+    cairo_font_options_destroy(options);
 }
 
 static CString getTopLevelPath()
